manually set subtomains in labels due to portainer issue

--- a/media-stack/docker-compose.yml
+++ b/media-stack/docker-compose.yml
@@ -18,12 +18,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.lidarr.entrypoints=http"
-      - "traefik.http.routers.lidarr.rule=Host(`${LIDARR_URL:-lidarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.lidarr.rule=Host(`lidarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.middlewares.lidarr-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.lidarr-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.lidarr.middlewares=lidarr-https-redirect"
       - "traefik.http.routers.lidarr-secure.entrypoints=https"
-      - "traefik.http.routers.lidarr-secure.rule=Host(`${LIDARR_URL:-lidarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.lidarr-secure.rule=Host(`lidarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.routers.lidarr-secure.tls=true"
       - "traefik.http.routers.lidarr-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.lidarr-secure.service=lidarr"
@@ -47,12 +47,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.sonarr.entrypoints=http"
-      - "traefik.http.routers.sonarr.rule=Host(`${SONARR_URL:-sonarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.sonarr.rule=Host(`sonarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.middlewares.sonarr-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.sonarr-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.sonarr.middlewares=sonarr-https-redirect"
       - "traefik.http.routers.sonarr-secure.entrypoints=https"
-      - "traefik.http.routers.sonarr-secure.rule=Host(`${SONARR_URL:-sonarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.sonarr-secure.rule=Host(`sonarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.routers.sonarr-secure.tls=true"
       - "traefik.http.routers.sonarr-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.sonarr-secure.service=sonarr"
@@ -79,12 +79,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.radarr.entrypoints=http"
-      - "traefik.http.routers.radarr.rule=Host(`${RADARR_URL:-radarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.radarr.rule=Host(`radarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.middlewares.radarr-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.radarr-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.radarr.middlewares=radarr-https-redirect"
       - "traefik.http.routers.radarr-secure.entrypoints=https"
-      - "traefik.http.routers.radarr-secure.rule=Host(`${RADARR_URL:-radarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.radarr-secure.rule=Host(`radarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.routers.radarr-secure.tls=true"
       - "traefik.http.routers.radarr-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.radarr-secure.service=radarr"
@@ -132,12 +132,12 @@ services:
   #     labels:
   #     - "traefik.enable=true"
   #     - "traefik.http.routers.tdarr.entrypoints=http"
-  #     - "traefik.http.routers.tdarr.rule=Host(`${TDARR_URL:-tdarr.local}.${DOMAIN.TLD}`)"
+  #     - "traefik.http.routers.tdarr.rule=Host(`tdarr.local.${DOMAIN.TLD}`)"
   #     - "traefik.http.middlewares.tdarr-https-redirect.redirectscheme.scheme=https"
   #     - "traefik.http.routers.tdarr-secure.middlewares=middlewares-authentik@file"
   #     - "traefik.http.routers.tdarr.middlewares=tdarr-https-redirect"
   #     - "traefik.http.routers.tdarr-secure.entrypoints=https"
-  #     - "traefik.http.routers.tdarr-secure.rule=Host(`${TDARR_URL:-tdarr.local}.${DOMAIN.TLD}`)"
+  #     - "traefik.http.routers.tdarr-secure.rule=Host(`tdarr.local.${DOMAIN.TLD}`)"
   #     - "traefik.http.routers.tdarr-secure.tls=true"
   #     - "traefik.http.routers.tdarr-secure.tls.certresolver=cloudflare"
   #     - "traefik.http.routers.tdarr-secure.service=tdarr"
@@ -188,12 +188,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.qBittorrentVpn.entrypoints=http"
-      - "traefik.http.routers.qBittorrentVpn.rule=Host(`${QBITTORRENT_URL:-torrent.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.qBittorrentVpn.rule=Host(`torrent.local.${DOMAIN.TLD}`)"
       - "traefik.http.middlewares.qBittorrentVpn-https-redirect.redirectscheme.scheme=https"
       # - "traefik.http.routers.qBittorrentVpn-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.qBittorrentVpn.middlewares=qBittorrentVpn-https-redirect"
       - "traefik.http.routers.qBittorrentVpn-secure.entrypoints=https"
-      - "traefik.http.routers.qBittorrentVpn-secure.rule=Host(`${QBITTORRENT_URL:-torrent.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.qBittorrentVpn-secure.rule=Host(`torrent.local.${DOMAIN.TLD}`)"
       - "traefik.http.routers.qBittorrentVpn-secure.tls=true"
       - "traefik.http.routers.qBittorrentVpn-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.qBittorrentVpn-secure.service=qBittorrentVpn"
@@ -220,12 +220,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.prowlarr.entrypoints=http"
-      - "traefik.http.routers.prowlarr.rule=Host(`${PROWLARR_URL:-prowlarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.prowlarr.rule=Host(`prowlarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.middlewares.prowlarr-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.prowlarr-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.prowlarr.middlewares=prowlarr-https-redirect"
       - "traefik.http.routers.prowlarr-secure.entrypoints=https"
-      - "traefik.http.routers.prowlarr-secure.rule=Host(`${PROWLARR_URL:-prowlarr.local}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.prowlarr-secure.rule=Host(`prowlarr.local.${DOMAIN.TLD}`)"
       - "traefik.http.routers.prowlarr-secure.tls=true"
       - "traefik.http.routers.prowlarr-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.prowlarr-secure.service=prowlarr"
@@ -252,12 +252,12 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.http.routers.jellyseer.entrypoints=http"
-        - "traefik.http.routers.jellyseer.rule=Host(`${JELLYSEER_URL:-requests}.${DOMAIN.TLD}`)"
+        - "traefik.http.routers.jellyseer.rule=Host(`requests.${DOMAIN.TLD}`)"
         - "traefik.http.middlewares.jellyseer-https-redirect.redirectscheme.scheme=https"
         - "traefik.http.routers.jellyseer.middlewares=jellyseer-https-redirect"
         - "traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https"
         - "traefik.http.routers.jellyseer-secure.entrypoints=https"
-        - "traefik.http.routers.jellyseer-secure.rule=Host(`${JELLYSEER_URL:-requests}.${DOMAIN.TLD}`)"
+        - "traefik.http.routers.jellyseer-secure.rule=Host(`requests.${DOMAIN.TLD}`)"
         - "traefik.http.routers.jellyseer-secure.tls=true"
         - "traefik.http.routers.jellyseer-secure.service=jellyseer"
         - "traefik.http.services.jellyseer.loadbalancer.server.port=5055"
@@ -282,12 +282,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.homarr.entrypoints=http"
-      - "traefik.http.routers.homarr.rule=Host(`${HOMARR_URL:-media}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.homarr.rule=Host(`media.${DOMAIN.TLD}`)"
       - "traefik.http.middlewares.homarr-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.homarr-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.homarr.middlewares=homarr-https-redirect"
       - "traefik.http.routers.homarr-secure.entrypoints=https"
-      - "traefik.http.routers.homarr-secure.rule=Host(`${HOMARR_URL}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.homarr-secure.rule=Host(`media.${DOMAIN.TLD}`)"
       - "traefik.http.routers.homarr-secure.tls=true"
       - "traefik.http.routers.homarr-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.homarr-secure.service=homarr"
