--- a/media-stack/docker-compose.yml
+++ b/media-stack/docker-compose.yml
@@ -18,12 +18,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.lidarr.entrypoints=http"
-      - "traefik.http.routers.lidarr.rule=Host(`lidarr.local.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.lidarr.rule=Host:lidarr.local.${DOMAIN.TLD}"
       - "traefik.http.middlewares.lidarr-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.lidarr-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.lidarr.middlewares=lidarr-https-redirect"
       - "traefik.http.routers.lidarr-secure.entrypoints=https"
-      - "traefik.http.routers.lidarr-secure.rule=Host(`lidarr.local.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.lidarr-secure.rule=Host:lidarr.local.${DOMAIN.TLD}"
       - "traefik.http.routers.lidarr-secure.tls=true"
       - "traefik.http.routers.lidarr-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.lidarr-secure.service=lidarr"
