left only the DOMAIN.TLD in there for testing

--- a/media-stack/docker-compose.yml
+++ b/media-stack/docker-compose.yml
@@ -79,12 +79,12 @@ services:
       labels:
       - "traefik.enable=true"
       - "traefik.http.routers.radarr.entrypoints=http"
-      - "traefik.http.routers.radarr.rule=Host(`${RADARR_URL}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.radarr.rule=Host(`${DOMAIN.TLD}`)"
       - "traefik.http.middlewares.radarr-https-redirect.redirectscheme.scheme=https"
       - "traefik.http.routers.radarr-secure.middlewares=middlewares-authentik@file"
       - "traefik.http.routers.radarr.middlewares=radarr-https-redirect"
       - "traefik.http.routers.radarr-secure.entrypoints=https"
-      - "traefik.http.routers.radarr-secure.rule=Host(`${RADARR_URL}.${DOMAIN.TLD}`)"
+      - "traefik.http.routers.radarr-secure.rule=Host(`${DOMAIN.TLD}`)"
       - "traefik.http.routers.radarr-secure.tls=true"
       - "traefik.http.routers.radarr-secure.tls.certresolver=cloudflare"
       - "traefik.http.routers.radarr-secure.service=radarr"
